# llm-zoomcamp

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
01-intro/: homework.ipynb  rag-intro.ipynb
02-open-source/: homework.ipynb  huggingface-flan-t5.ipynb  huggingface-phi3.ipynb  ollama.ipynb
03-vector-search/: demo_es.ipynb  evaluate-text.ipynb  evaluate-vector.ipynb  ground-truth-data.ipynb  homework.ipynb
04-monitoring/: homework.ipynb  offline-rag-evaluation.ipynb
05-orchestration/llm/: settings.yaml
05-orchestration/llm/homework/data_exporters/: infinite_vega.py
05-orchestration/llm/homework/pipelines/base/: metadata.yaml
05-orchestration/llm/rager/data_exporters/: numinous_fission.py
05-orchestration/llm/rager/pipelines/ragic/: metadata.yaml
competition/: EDA.ipynb  baseline.ipynb  double-check.ipynb  minsearch.py  rag.ipynb
images/jupyter-lab/: Dockerfile  pyproject.toml
workshops/dlt/: dlt_homework.ipynb  intro_dlt.ipynb
