[tool.poetry]
name = "app"
version = "0.1.0"
description = "LLM-Zoomcamp package"
authors = ["Khubbatulin Mark markhubbatulin@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.34.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
transformers = "^4.41.2"
tqdm = "^4.66.4"
torch = "^2.3.1"
elasticsearch = "^8.14.0"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.2"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
